Added search for recipes and associated information with Spoonacular API

--- a/webapp/.env
+++ b/webapp/.env
@@ -2,3 +2,22 @@
 G_CLIENT_ID = 676721621696-o1nndueraaj0mjkcjg30na0lqclrpkv5.apps.googleusercontent.com
 G_CLIENT_SECRET = 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
 
+# spellcaster29@gmail.com
+SPOONACULAR_KEY = 39fa67d5f0cf4074a659adb435ea6e2a
+
+# spellcaster2905@gmail.com
+# SPOONACULAR_KEY = a47e2568c12944faa5fbbf19a3fe19bc
+
+# spellcaster0529@gmail.com
+# SPOONACULAR_KEY = 836bd174b3904b30b5292b7a40e69693
+
+# spellcaster9000@gmail.com
+# SPOONACULAR_KEY = 925cbc9427594b7f9e1e192b5abc2b70
+
+# spellgamer29@gmail.com
+# SPOONACULAR_KEY = 2ae31e6c1bc842eeb08f6c07e6582b31
+
+# spellplayer29@gmail.com
+# SPOONACULAR_KEY = 03339af69f2647869c2224da31485620
+
+
