calendar containerization + add event to calendar

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,6 @@ version: '3'
 services:
 
     couchdb:
-        # image: "couchdb"
         build: "./couchdb"
         networks:
             - app-network
@@ -30,10 +29,19 @@ services:
             - app-network
         restart: on-failure
 
+    calendar:
+        build: "./calendar"
+        ports:
+            - "3001:3001"
+        depends_on:
+            - couchdb
+            - webapp
+        networks:
+            - app-network
+        restart: on-failure
 
 volumes:
     couchdb-data:
-
 
 networks:
     app-network:
